# nexe-agent-internship

./: README.md
advanced/autonomous-business-agent/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
advanced/autonomous-business-agent/chroma_db/: chroma.sqlite3
advanced/autonomous-business-agent/src/: autonomous_agent.py  build_db.py  chunk_text.py  main.py  rag_agent.py  rag_tool.py  read_pdf.py  retrieve.py  vector_store.py
advanced/autonomous-business-agent/web-ui/: ARCHITECTURE.md  BUILD_SUMMARY.md  DOCUMENT_UPLOAD_FEATURE.md  README.md  package-lock.json  package.json  start.bat  start.sh
advanced/autonomous-business-agent/web-ui/api/: main.py
advanced/autonomous-business-agent/web-ui/api/chroma_db/: chroma.sqlite3
advanced/autonomous-business-agent/web-ui/app/: page.tsx
advanced/autonomous-business-agent/web-ui/components/: ChatInterface.tsx  DocumentManager.tsx  ExecutionLogs.tsx
advanced/autonomous-business-agent/web_ui/: .gitignore  COMPLETE_SUMMARY.md  README.md  USER_GUIDE.md  WSL_WINDOWS_SETUP.md
advanced/autonomous-business-agent/web_ui/api/: main.py  requirements.txt
advanced/autonomous-business-agent/web_ui/app/: layout.tsx
advanced/autonomous-business-agent/web_ui/components/: ChatInterface.tsx  DocumentManager.tsx
advanced/multi-agent-system/: README.md  pyproject.toml
beginner/ai-calculator-agent/: .env  README.md  memory.json  pyproject.toml
beginner/tool-calling-ai-agent/: README.md  pyproject.toml
internship-dashboard/: package-lock.json  package.json
internship-dashboard/app/: layout.tsx  (+1 more)
(+14 files in other folders)
