[project]
name = "autonomous-business-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "numpy>=2.4.6",
    "openai-agents>=0.17.4",
    "pypdf>=6.12.1",
    "python-decouple>=3.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
